--- a/opmaak.css
+++ b/opmaak.css
@@ -1,6 +1,16 @@
-ul{
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+}
 
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  padding: 8px;
+  background-color: #dddddd;
 }
