--- a/opmaak.css
+++ b/opmaak.css
@@ -3,6 +3,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: #333;
 }
 
 li {
@@ -11,6 +12,8 @@ li {
 
 li a {
   display: block;
-  padding: 8px;
-  background-color: #dddddd;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
