--- a/opmaak.css
+++ b/opmaak.css
@@ -27,8 +27,13 @@ footer {
   padding: 20px;
   margin-top: 10px;
   border-top: 1px solid #ccc;
+  position: absolute;
 }
 
 main {
-  flex-grow: 1;
+  min-height: calc(100% - (headerheight + footerheight));
+}
+
+body {
+  position: relative;
 }
