--- a/opmaak.css
+++ b/opmaak.css
@@ -27,10 +27,7 @@ footer {
   padding: 20px;
   margin-top: 10px;
   border-top: 1px solid #ccc;
-  margin-top: auto;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
