--- a/opmaak.css
+++ b/opmaak.css
@@ -23,10 +23,10 @@ li a:hover {
 }
 
 footer {
+  background-color: #333;
+  color: white;
   text-align: center;
   padding: 20px;
-  margin-top: 10px;
-  border-top: 1px solid #ccc;
   position: absolute;
   bottom: 0;
   width: 100%;
