--- a/opmaak.css
+++ b/opmaak.css
@@ -23,8 +23,8 @@ li a:hover {
 }
 
 footer {
-  background-color: #333;
-  color: white;
+  background-color: #ffffff;
+  color: black;
   text-align: center;
   padding: 20px;
   position: absolute;
