--- a/opmaak.css
+++ b/opmaak.css
@@ -23,7 +23,7 @@ li a:hover {
 }
 
 footer {
-  background-color: #ffffff;
+  background-color: rgba(51, 51, 51, 0);
   color: black;
   text-align: center;
   padding: 20px;
