--- a/opmaak.css
+++ b/opmaak.css
@@ -23,11 +23,12 @@ li a:hover {
 }
 
 footer {
-  background-color: rgba(51, 51, 51, 0);
-  color: black;
+  /*background-color: rgba(51, 51, 51, 0);*/
+  /*color: black;*/
   text-align: center;
   padding: 20px;
-  position: sticky;
+  /*position: sticky;*/
+  position: bottom;
   bottom: 0;
   width: 100%;
 }
