--- a/opmaak.css
+++ b/opmaak.css
@@ -82,4 +82,4 @@ footer {
     display: block;
     line-height: 30px;
 }
-.top-level-menu a:hover { color: #ff0000; }
+.top-level-menu a:hover { color: #ffffff; }
